refactor(extended-2.1): update CSS and HTML according to BEM

--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
   display: block;
   text-align: right;
 }
-.header-img {
+.header__img {
   width: 100%;
 }
-.header .more-inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
@@ -27,27 +27,27 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.tasks-item__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-wrapper {
+.tasks-adding__wrapper {
   display: flex;
 }
 .tasks-list {
   margin: 0;
   padding: 0px;
 }
-.tasks-item,
-.title {
+.tasks-list__item,
+.tasks__title {
   list-style: none;
 }
-.input,
-.button{
+.task-item__input,
+.tasks__button{
   outline: none;
 }
-.button {
+.tasks__button {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +56,12 @@
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-.button:hover {
+.tasks__button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-.title,
-.label[for="new-task"] {
+.tasks__title,
+.tasks-adding__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +70,7 @@
   margin: 0;
   text-transform: uppercase;
 }
-.input[type="text"] {
+.task-item__input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +82,21 @@
   font-family: Lato, sans-serif;
   color: #888;
 }
-.input[type="text"]:focus {
+.task-item__input-text:focus {
   color: #333;
 }
 
 /* New Task */
-.label[for="new-task"] {
+.tasks-adding__label {
   display: block;
   margin: 0 0 20px;
 }
-.input#new-task {
+.task-item__adding-item {
   width: 318px;
 }
 
 /* Task list */
-.tasks-item {
+.tasks-list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -104,47 +104,47 @@
   justify-content: space-between;
   align-items: center;
 }
-.tasks-item > * {
+.tasks-list__item > * {
   vertical-align: middle;
 }
 
-.tasks-item > .input[type="checkbox"] {
+.tasks-list__item > .task-item__input-check {
   margin: 0 10px;
 }
-.tasks-item > .label {
+.tasks-list__item > .task-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.tasks-item > .input[type="text"] {
+.tasks-list__item > .task-item__input-text {
   width: 226px;
 }
-.button.delete .tasks-remove {
+.tasks-remove {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.button.delete .tasks-remove:hover {
+.tasks__button-delete .tasks-remove:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-.tasks-list#completed-tasks .label {
+.tasks-list__complete .task-item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.tasks-list .tasks-item .input[type="text"] {
+.tasks-list .tasks-list__item .task-item__input-text {
   display: none;
 }
 
-.tasks-list .tasks-item.edit-mode .input[type="text"] {
+.tasks-list .tasks-list__item-edit .task-item__input-text {
   display: inline-block;
   width: 224px;
 }
 
-.tasks-list .tasks-item.edit-mode .label {
+.tasks-list .tasks-list__item-edit .task-item__label {
   display: none;
 }
